delete api because vidran

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,8 @@
     </head>
     <body>
         <h1> <%=title %> </h1>
-        <section>
+        <p> להסתכל בגוגל דרייב בקובץ שמקס הכין שם הכל כתוב מסודר </p>
+        <!-- <section>
             red color: not ready
         </section>
         <ul>
@@ -300,7 +301,7 @@
                     json data with status 1/0, all user courses hierarchy
                 </p>
             </li>
-        </ul>
+        </ul> -->
         <script>
             console.log('shenkar lecturus api')
         </script>
